fix: remove z-index of controls in pets page

--- a/shelter/pets/style.css
+++ b/shelter/pets/style.css
@@ -118,7 +118,7 @@
 }
 
 .slider__control {
-    z-index: 100;
+    /*z-index: 100;*/
 }
 
 .current-page {
